--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mongodb": "4.11",
     "socket.io": "^4.5.4"
   },
   "devDependencies": {
